# CMake_Learning

./: .gitignore
control-structures/cmp0054-confuse/: CMakeLists.txt
control-structures/cmp0054-fix/: CMakeLists.txt
control-structures/cmp0054-workaround/: CMakeLists.txt
control-structures/foreach/: CMakeLists.txt
control-structures/if-else/: CMakeLists.txt
control-structures/if-simple/: CMakeLists.txt
control-structures/try-fix/: CMakeLists.txt
function/cmake-style/: CMakeLists.txt
function/cmake-style-limiations/: CMakeLists.txt
function/function-args/: CMakeLists.txt
function/function-location/: CMakeLists.txt
function/return/: CMakeLists.txt
function/return-value/: CMakeLists.txt
function/simple-function/: CMakeLists.txt
gtest-example/pkg-config/: CMakeLists.txt
gtest-example/remote-gtest/: CMakeLists.txt
libraies-examples/right-way/: CMakeLists.txt
listfiles/include-processor-count/: CMakeLists.txt
listfiles/include-users/: CMakeLists.txt
listfiles/modify-path/: CMakeLists.txt
listfiles/path-to-module/: CMakeLists.txt
listfiles/simple-tree/: CMakeLists.txt
listfiles/simple-tree-binary-vars/: CMakeLists.txt
listfiles/simple-tree-sources-vars/: CMakeLists.txt
loop/break/: CMakeLists.txt
loop/continue/: CMakeLists.txt
loop/create-file/: CMakeLists.txt  Hello.txt
loop/foreach/: CMakeLists.txt
loop/foreach-range/: CMakeLists.txt
loop/while/: CMakeLists.txt
minimal_example/: foo.cpp
practice_examples/twordcount1/: CMakeLists.txt  Makefile  README.md
project-examples/c-compiler/: CMakeLists.txt
(+53 files in other folders)
